@@ -9,7 +9,8 @@
  ~ = Changes   since previous version
 
 1.9 preview 14 (2011-03-??)
- + Osmdroid SQLite: Tile image format conversion implemented 
+ + Osmdroid SQLite: Tile image format conversion implemented
+ - Osm Hiking maps removed (excluding the "Wanderreitkarte Abo" version) 
 
 1.9 preview 13 (2011-03-12)
  + Download to tile store without creating an atlas:  
